Fix modal__close on small screen. Add test-cod for window - thanks and cod for send form to mail.php (comented)

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -572,6 +572,10 @@ a
 	.map__contacts-phone
 		font-size: 18px
 		margin-bottom: 20px
+	
+	.modal__close
+		right: 5px
+		top: 5px
 
 @media (max-width: 375px)
 	.header__top
